--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,11 @@
 {
     "name": "laravel/laravel",
     "type": "project",
-    "description": "The Laravel Framework.",
+    "description": "Test de Marival.",
     "keywords": [
-        "framework",
-        "laravel"
+        "Marival",
+        "Access",
+        "Test"
     ],
     "license": "MIT",
     "require": {
